# CoD

summarize-text/: CoD.py  CoD_summarization.py  README.md  pyproject.toml  simple_summarization.py
